feat(backend): fill API gaps on backend side
