# backend/ShuKnow.WebAPI/Requests/Files/UpdateTextContentRequest.cs
@@ -1,0 +1,4 @@
+namespace ShuKnow.WebAPI.Requests.Files;
+
+public record UpdateTextContentRequest(
+    string Content);
